fix content behind menu

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,3 +16,7 @@ body{
     display: unset;
     margin-top: auto;
 }
+
+.wrapper__main > .post:nth-child(2) {
+    margin-top: 50px;
+}
